Zmena uvodni stranky

--- a/a/index.html
+++ b/a/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Programové a datové soubory</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <style>
         h2 {
@@ -16,6 +17,17 @@
 <body>
     <header>
         <h1>Programové a datové soubory</h1>
+        <div class="topnav" id="myTopnav">
+            <a href="../index.html">Úvod</a>
+            <a href="../a/index.html">Programové a datové soubory</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+            <a href="#" class="active">Softwarové licence</a>
+            <a href="#about">About</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
+        </div>
     </header>
     <main>
         <h2>Soubory</h2>
@@ -62,6 +74,7 @@
         </div>
         <div>&copy; Copyright 2025, Marek Lučný, IT1</div>
     </footer>
+    <script src="../js/main.js"></script>    
 </body>
 
 </html>
